--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Shady Bears – Play Online | Fullscreen & Game Info (2024)</title>
+  <title>Shady Bears Unblocked</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Play Shady Bears online for free Guide your bear through shadowy forests collect acorns and outwit rivals in solo or team play No downloads, no login." />
   <link rel="canonical" href="https://shady-bears-game.github.io/" />
