--- a/Play.html
+++ b/Play.html
@@ -5,7 +5,7 @@
   <title>Play Shady Bears – Free Online Game (Unblocked, Fullscreen)</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="robots" content="index, follow, max-image-preview:large" />
-  <meta name="description" content="Play Shady Bears online for free Guide your bear through shadowy forests collect acorns and outwit rivals in solo or team play No downloads, no login." />
+  <meta name="description" content="Play Shady Bears online for free. Guide your bear, collect acorns, and dodge shadows. Instant browser play with tips, controls, fullscreen, and FAQs. No downloads." />
   <meta name="keywords" content="Shady Bears, Shady Bears unblocked, play Shady Bears online, bear game, HTML5 games, browser games" />
 
   <!-- Open Graph -->
@@ -13,13 +13,13 @@
   <meta property="og:title" content="Play Shady Bears – Free Online Game" />
   <meta property="og:description" content="Guide your bear, collect acorns, and dodge shadows in Shady Bears. Play instantly in your browser with fullscreen and tips." />
   <meta property="og:url" content="https://shady-bears-game.github.io/" />
-  <meta property="og:image" content="https://shady-bears-game.github.io/Play Shady Bears Online For Free.webp" />
+  <meta property="og:image" content="https://shady-bears-game.github.io/cover.jpg" />
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Play Shady Bears – Free Online Game" />
   <meta name="twitter:description" content="Guide your bear, collect acorns, and dodge shadows in Shady Bears. Instant browser play with fullscreen and FAQs." />
-  <meta name="twitter:image" content="https://shady-bears-game.github.io/Play Shady Bears Online For Free.webp" />
+  <meta name="twitter:image" content="https://shady-bears-game.github.io/cover.jpg" />
 
   <link rel="canonical" href="https://shady-bears-game.github.io/" />
 
@@ -110,8 +110,6 @@
     /* Small accessibility helpers */
     .sr-only { position:absolute; width:1px; height:1px; padding:0; margin:-1px; overflow:hidden; clip:rect(0,0,0,0); white-space:nowrap; border:0; }
   </style>
-    <meta name="google-site-verification" content="ZRr_ovO3cRRBTE9aTtk6ogWdswwvW7LLQisvFqLEVI8" />
-
 </head>
 
 <body>
@@ -236,8 +234,9 @@
       <section class="section card" id="unblocked" aria-labelledby="unblocked-title">
         <h2 id="unblocked-title">Shady Bears Unblocked</h2>
         <p>
-          You can play <strong><a href="https://www.gcsgames.com/game/shady-bears/">Shady Bears unblocked</a></strong> directly on <a href="https://www.gcsgames.com/game/shady-bears/">this page</a>. It runs in a secure HTTPS iframe and typically works on most school or work networks that allow standard gaming websites. No extensions or VPNs required.
-        </p>        <ul>
+          You can play <strong>Shady Bears unblocked</strong> directly on this page. It runs in a secure HTTPS iframe and typically works on most school or work networks that allow standard gaming websites. No extensions or VPNs required.
+        </p>
+        <ul>
           <li>Instant play—no downloads, no sign‑ups.</li>
           <li>Designed for short sessions on desktop, Chromebook, and mobile.</li>
           <li>Use the <em>Fullscreen</em> button for an immersive experience.</li>
