--- a/papas.html
+++ b/papas.html
@@ -109,6 +109,8 @@
 
     boot();
   </script>
+  <script src="ruffle.js"></script>
+
   <noscript><div class="note">Enable JavaScript to play.</div></noscript>
 </body>
 </html>
