--- a/papas.html
+++ b/papas.html
@@ -3,114 +3,159 @@
 <head>
   <meta charset="utf-8" />
   <title>Papa's Sushiria — Play Online</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <meta name="description" content="Play Papa's Sushiria in your browser with the Ruffle Flash emulator. No plugins needed." />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="Play Papa's Sushiria in your browser with the local Ruffle emulator. No plugins." />
   <style>
-    html,body{margin:0;height:100%;background:#0e1220;color:#e8ecf3;font-family:system-ui,-apple-system,Segoe UI,Roboto,sans-serif}
-    .wrap{max-width:960px;margin:0 auto;padding:16px}
-    h1{font-size:1.6rem;margin:12px 0}
-    #stage{position:relative;background:#000;border-radius:8px;overflow:hidden;box-shadow:0 10px 30px rgba(0,0,0,.5);height:600px}
-    .row{display:flex;gap:8px;align-items:center;margin:10px 0 14px}
-    .btn{padding:8px 14px;border:0;border-radius:8px;background:#2563eb;color:#fff;font-weight:600;cursor:pointer;text-decoration:none}
-    .note{font-size:.9rem;opacity:.9}
-    #status{margin-top:10px;font-size:.92rem}
-    ul{margin:.5rem 0;padding-left:1.2rem}
+    :root{
+      --bg1:#0f1228; --bg2:#151b3f; --accent:#4f7cff; --text:#eaf1ff; --muted:#a9b5d9;
+      --card:#121632; --card2:#1a1f46; --radius:14px;
+    }
+    *{box-sizing:border-box}
+    html,body{height:100%;margin:0}
+    body{
+      font-family: system-ui,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Inter,sans-serif;
+      color:var(--text);
+      background: radial-gradient(1200px 800px at 10% -10%, #1e265e55, transparent 60%),
+                  linear-gradient(120deg,var(--bg1),var(--bg2));
+      background-size: 200% 200%;
+      animation: bgMove 18s ease-in-out infinite;
+      display:flex; align-items:flex-start; justify-content:center;
+    }
+    @keyframes bgMove{0%,100%{background-position:0% 0%}50%{background-position:100% 100%}}
+
+    .wrap{width:min(1100px,96%); padding:28px 18px 40px}
+
+    header{
+      display:flex; align-items:flex-end; justify-content:space-between; gap:12px; flex-wrap:wrap;
+      margin-bottom:14px;
+    }
+    .title{
+      font-size:clamp(1.6rem, 2.6vw + .6rem, 2.4rem);
+      font-weight:800; letter-spacing:.2px;
+      text-shadow:0 10px 30px #0008;
+      animation: float 6s ease-in-out infinite;
+    }
+    @keyframes float{0%,100%{transform:translateY(0)}50%{transform:translateY(-4px)}}
+
+    .chips{
+      display:flex; gap:8px; flex-wrap:wrap;
+    }
+    .chip{
+      background:linear-gradient(180deg,var(--card),var(--card2));
+      border:1px solid #2a3470;
+      padding:8px 12px; border-radius:999px; font-size:.85rem; color:var(--muted);
+      box-shadow:inset 0 0 0 1px #0006, 0 6px 18px -10px #000;
+      animation:pulse 3.5s ease-in-out infinite;
+    }
+    .chip b{color:#fff}
+    @keyframes pulse{0%,100%{box-shadow:inset 0 0 0 1px #0006,0 6px 18px -10px #000}50%{box-shadow:inset 0 0 0 1px #4f7cff55,0 16px 26px -14px #000}}
+
+    .stage-card{
+      background:linear-gradient(180deg,var(--card),var(--card2));
+      border:1px solid #293173;
+      border-radius:var(--radius);
+      padding:14px; box-shadow:0 18px 50px -18px #000;
+    }
+    .stage{
+      border-radius:10px; overflow:hidden;
+      background:#000; position:relative;
+      aspect-ratio: 16 / 10; /* Ruffle will scale inside */
+    }
+    .controls{
+      display:flex; gap:10px; flex-wrap:wrap; margin:10px 0 14px;
+    }
+    .btn{
+      appearance:none; border:0;
+      background:linear-gradient(180deg,#3e63ff,#2047ff);
+      color:#fff; font-weight:700; letter-spacing:.2px;
+      padding:10px 16px; border-radius:9px; cursor:pointer;
+      box-shadow:0 10px 22px -10px #1a2cff, inset 0 1px 0 0 #7fa1ff55;
+      transition: transform .12s ease, box-shadow .2s ease, filter .2s ease;
+    }
+    .btn:hover{transform:translateY(-1px); filter:brightness(1.06)}
+    .btn:active{transform:translateY(0); box-shadow:0 8px 18px -10px #1a2cff}
+
+    #status{
+      margin-top:6px; color:var(--muted); font-size:.92rem;
+    }
+    footer{margin-top:22px; color:#9eb0e6; font-size:.85rem; opacity:.8}
   </style>
 </head>
 <body>
-  <div class="wrap">
-    <h1>Papa's Sushiria</h1>
-    <div class="row">
-      <button class="btn" id="fs">Fullscreen</button>
-      <a class="btn" href="papas-sushiria.swf" download>Download SWF</a>
-    </div>
+  <main class="wrap">
+    <header>
+      <h1 class="title">Papa's Sushiria</h1>
+      <div class="chips" aria-label="Game info">
+        <div class="chip"><b>Release:</b>&nbsp;2016</div>
+        <div class="chip"><b>Developer:</b>&nbsp;Flipline Studios</div>
+        <div class="chip"><b>Technology:</b>&nbsp;Flash&nbsp;•&nbsp;Ruffle Emulator</div>
+      </div>
+    </header>
 
-    <div id="stage" aria-label="Game area"></div>
-    <div id="status" class="note">Loading emulator…</div>
+    <section class="stage-card" aria-label="Game player">
+      <div class="controls">
+        <button class="btn" id="fullscreen">Fullscreen</button>
+        <button class="btn" id="reload">Reload</button>
+        <a class="btn" href="papas-sushiria.swf" download>Download SWF</a>
+      </div>
+      <div id="stage" class="stage"></div>
+      <div id="status">Loading Ruffle…</div>
+    </section>
 
-    <div class="note">
-      <strong>Checklist:</strong>
-      <ul>
-        <li>Page URL must be <code>https://YOURNAME.github.io/REPO/</code> (GitHub Pages), not raw.githubusercontent.com.</li>
-        <li><code>index.html</code> and <code>papas-sushiria.swf</code> in the SAME folder.</li>
-        <li>Open <code>.../papas-sushiria.swf</code> directly — if it 404s, the path/name is wrong.</li>
-        <li>Hard refresh (Cmd/Ctrl+Shift+R) after publishing.</li>
-      </ul>
-    </div>
-  </div>
+    <footer>
+      Tip: If the screen stays black, hard refresh (Ctrl/Cmd + Shift + R). Make sure <code>ruffle.js</code>, <code>ruffle.wasm</code>, and <code>papas-sushiria.swf</code> are in this same folder.
+    </footer>
+  </main>
 
+  <!-- Load Ruffle from local files (keep ruffle.js & ruffle.wasm next to this HTML) -->
+  <script src="ruffle.js"></script>
   <script>
-    // Try multiple CDNs (nightly first), report status visibly.
-    const statusEl = document.getElementById('status');
-    const CDNS = [
-      "https://cdn.jsdelivr.net/npm/@ruffle-rs/ruffle-nightly@latest/dist/ruffle.js",
-      "https://cdn.jsdelivr.net/npm/@ruffle-rs/ruffle@latest/dist/ruffle.js",
-      "https://unpkg.com/@ruffle-rs/ruffle@latest/dist/ruffle.js"
-    ];
+    (function () {
+      const statusEl = document.getElementById('status');
+      const stageEl  = document.getElementById('stage');
 
-    function loadScript(src) {
-      return new Promise((resolve, reject) => {
-        const s = document.createElement('script');
-        s.src = src;
-        s.async = true;
-        s.crossOrigin = "anonymous";
-        s.onload = () => resolve(src);
-        s.onerror = () => reject(new Error("Failed: " + src));
-        document.head.appendChild(s);
-      });
-    }
+      function setStatus(msg){ statusEl.textContent = msg; }
 
-    async function loadRuffleWithFallback() {
-      for (const url of CDNS) {
-        try {
-          statusEl.textContent = "Loading Ruffle… (" + url + ")";
-          await loadScript(url);
-          if (window.RufflePlayer) {
-            statusEl.textContent = "Ruffle loaded from: " + url;
-            return true;
-          }
-        } catch (e) {
-          // try next
-        }
+      if (!window.RufflePlayer) {
+        setStatus('ruffle.js did not load. Ensure ruffle.js & ruffle.wasm are next to index.html.');
+        return;
       }
-      statusEl.textContent = "Could not load Ruffle from any CDN.";
-      return false;
-    }
-
-    async function boot() {
-      const ok = await loadRuffleWithFallback();
-      if (!ok) return;
 
       try {
         const ruffle = window.RufflePlayer.newest();
         const player = ruffle.createPlayer();
-        const stage = document.getElementById('stage');
-        stage.appendChild(player);
 
-        statusEl.textContent = "Loading game…";
-        await player.load("papas-sushiria.swf");
-        statusEl.textContent = "Loaded. Have fun!";
+        // Fill container
+        player.style.width = '100%';
+        player.style.height = '100%';
 
-        // Fullscreen button
-        document.getElementById('fs').addEventListener('click', () => {
-          if (stage.requestFullscreen) stage.requestFullscreen();
-          else if (stage.webkitRequestFullscreen) stage.webkitRequestFullscreen();
-          else if (stage.msRequestFullscreen) stage.msRequestFullscreen();
+        stageEl.appendChild(player);
+        setStatus('Loading game…');
+
+        player.load('papas-sushiria.swf').then(() => {
+          setStatus('Loaded. Enjoy!');
+        }).catch((e) => {
+          console.error(e);
+          setStatus('Failed to load SWF: ' + (e?.message || e));
         });
 
-        // Fit player to container
-        function fit(){ player.style.width = "100%"; player.style.height = "100%"; }
-        window.addEventListener('resize', fit); fit();
-      } catch (e) {
-        console.error(e);
-        statusEl.textContent = "Error loading game: " + (e?.message || e);
+        // Controls
+        document.getElementById('fullscreen').addEventListener('click', () => {
+          if (stageEl.requestFullscreen) stageEl.requestFullscreen();
+          else if (stageEl.webkitRequestFullscreen) stageEl.webkitRequestFullscreen();
+          else if (stageEl.msRequestFullscreen) stageEl.msRequestFullscreen();
+        });
+
+        document.getElementById('reload').addEventListener('click', () => location.reload());
+        window.addEventListener('resize', () => {
+          player.style.width = '100%';
+          player.style.height = '100%';
+        });
+      } catch (err) {
+        console.error(err);
+        setStatus('Error initializing Ruffle: ' + (err?.message || err));
       }
-    }
-
-    boot();
+    })();
   </script>
-  <script src="ruffle.js"></script>
-
-  <noscript><div class="note">Enable JavaScript to play.</div></noscript>
 </body>
 </html>
